Pull up following revision(s) (requested by dogcow in ticket #473): 	usr.bin/newsyslog/newsyslog.c: revision 1.57 Fix an embarrassing mistake regarding moving down log files. Reported by (and fix included in) PR bin/40635 from Jukka Salmi.